changed header css

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" type="image/png" href="%PUBLIC_URL%/telephonyicon.png" />
+
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <meta property="description" name="description" content="Air call Phone." />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
